switch over handlers to stdlib style
